@@ -16746,6 +16746,13 @@ OVS_WAIT_UNTIL([
 AT_CHECK([cat mirror1.packets | sort], [0], [expout])
 AT_CHECK([cat mirror2.packets | sort], [0], [expout])
 
+port_src_old=$(ovs-vsctl get mirror mirror-from-lp1 select_src_port)
+check ovn-nbctl set mirror $uuid1 filter=both
+port_src_new=$(ovs-vsctl get mirror mirror-from-lp1 select_src_port)
+port_dst_new=$(ovs-vsctl get mirror mirror-from-lp1 select_dst_port)
+AT_CHECK([test $port_src_old = $port_src_new], [0], [])
+AT_CHECK([test $port_src_old = $port_dst_new], [0], [])
+
 OVN_CLEANUP([hv1])
 AT_CLEANUP
 ])
