@@ -14,7 +14,8 @@ Post v23.03.0
     existing behaviour of flooding these arp requests to all attached Ports.
   - Always allow IPv6 Router Discovery, Neighbor Discovery, and Multicast
     Listener Discovery protocols, regardless of ACLs defined.
-  - Support using local OVS port as port-mirroring target.
+  - Support using local OVS port as port-mirroring target, and also support
+    'both' directions for the 'filter' field.
 
 OVN v23.03.0 - 03 Mar 2023
 --------------------------
